# nam_damasco_v7

./: .env.test  requirements.txt
logs/: app.json
namwoo_app/: .env.example  .env.test  __init__.py  celery_tasks.py  create_assistant.py  extensions.py  pyproject.toml  requirements.txt
namwoo_app/api/: receiver_routes.py  routes.py
namwoo_app/config/: config.py
namwoo_app/data/: schema.sql  store_locations.json  system_prompt.txt  text_prompt.txt  tiendas_data.json
namwoo_app/logs/: app.json  production_schema.sql
namwoo_app/models/: product.py  thread_map.py
namwoo_app/services/: ai_service.py  damasco_service.py  geolocation_service.py  google_service.py  llm_processing_service.py  openai_service.py  product_service.py  support_board_service.py  thread_mapping_service.py  tools_schema.py
namwoo_app/services/providers/: google_gemini_provider.py  openai_assistant_provider.py  openai_chat_provider.py
namwoo_app/utils/: conversation_details.py  conversation_location.py  db_utils.py  logging_utils.py  message_parser.py  product_utils.py  text_utils.py
tests/: conftest.py  test_logging_utils.py  test_product_utils.py  test_tool_calls.py
